[tool.poetry]
name = "blackbookfinance"
version = "0.1.0"
description = ""
authors = ["Bernard Siebens <bernard@siebens.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.4"
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
