[tool.poetry]
name = "blackbookfinance"
version = "0.1.0"
description = ""
authors = ["Bernard Siebens <bernard@siebens.org>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.4"
python-decouple = "^3.8"
black = "^25.1.0"
yfinance = "^0.2.65"
requests = "^2.32.4"
lxml = "^6.0.0"
django-money = "^3.5.4"
django-tree-queries = "^0.20.0"
poetry-core = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pandas-stubs = "2.3.0.250703"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
